--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
     "parcel": "^2.8.3",
-    "postcss-nested": "^6.0.1"
+    "postcss-nested": "^6.0.1",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "handlebars": "^4.7.7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "handlebars": "^4.7.7"
   }
 }
