add chat-feed to chat-page

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "**Vanilla JS chat web-application**",
   "scripts": {
-    "dev": "parcel --no-cache ./src/index.hbs --open",
+    "dev": "parcel --no-cache ./src/index.hbs",
     "build": "parcel build ./src/index.hbs",
     "start": "npm run build && node server.js",
     "eslint": "eslint",
