add validation on pages: [login, signin, change-password]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,7 @@
     "lib": [
       "ESNext",
       "DOM",
+      "dom.iterable"
     ],
     "plugins": [
       { "name": "typescript-plugin-css-modules" }
