--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
+        "strictPropertyInitialization": false,
         "noImplicitAny": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
