--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "middle.messenger.praktikum.yandex",
   "version": "1.0.0",
-  "description": "**Vanilla JS chat web-application**",
+  "description": "**Typescript JS chat web-application**",
   "scripts": {
     "dev": "parcel --no-cache ./src/index.html",
     "build": "parcel build ./src/index.html",
@@ -22,16 +22,27 @@
   "homepage": "https://github.com/dmitriy-kochetkov/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "@types/chai": "^4.3.5",
+    "@types/jsdom": "^21.1.1",
+    "@types/mocha": "^10.0.1",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.15",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "chai": "^4.3.7",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "jsdom": "^22.1.0",
+    "mocha": "^10.2.0",
     "parcel": "^2.8.3",
     "postcss-nested": "^6.0.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^15.2.0",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "typescript-plugin-css-modules": "^5.0.1"
   },
