--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "**Typescript JS chat web-application**",
   "scripts": {
-    "dev": "parcel --no-cache ./src/index.html",
-    "build": "parcel build ./src/index.html",
+    "dev": "webpack serve --config webpack.dev.js --open",
+    "devParcel": "parcel --no-cache ./src/index.html",
+    "build": "webpack --config webpack.prod.js --stats-children",
     "start": "npm run build && node server.js",
     "eslint": "eslint src/**/*.ts",
     "stylelint": "stylelint src/**/*.{pcss,css}",
@@ -32,20 +33,31 @@
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "chai": "^4.3.7",
+    "css-loader": "^6.8.1",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "handlebars-loader": "^1.7.3",
+    "html-webpack-plugin": "^5.5.3",
     "jsdom": "^22.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
     "parcel": "^2.8.3",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.3.3",
     "postcss-nested": "^6.0.1",
     "proxyquire": "^2.1.3",
     "sinon": "^15.2.0",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
-    "typescript-plugin-css-modules": "^5.0.1"
+    "typescript-plugin-css-modules": "^5.0.1",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
     "express": "^4.18.2",
