--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "devParcel": "parcel --no-cache ./src/index.html",
     "build": "webpack --config webpack.prod.js --stats-children",
     "start": "npm run build && node server.js",
+    "lint": "npm-run-all eslint stylelint",
     "eslint": "eslint src/**/*.ts",
     "stylelint": "stylelint src/**/*.{pcss,css}",
     "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test lint"
+    }
   },
   "repository": {
     "type": "git",
@@ -39,6 +45,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.5.3",
+    "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
