--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint": "npm-run-all eslint stylelint",
     "eslint": "eslint src/**/*.ts",
     "stylelint": "stylelint src/**/*.{pcss,css}",
-    "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'"
+    "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'",
+    "validate": "npm-run-all --parallel test lint"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test && npm run lint"
+      "pre-commit": "npm run validate"
     }
   },
   "repository": {
@@ -49,6 +50,7 @@
     "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
+    "npm-run-all": "^4.1.5",
     "parcel": "^2.8.3",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
