--- a/package.json
+++ b/package.json
@@ -14,11 +14,6 @@
     "validate": "npm-run-all --parallel test lint",
     "precommit": "npm run validate"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run validate"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dmitriy-kochetkov/middle.messenger.praktikum.yandex.git"
@@ -42,16 +37,16 @@
     "@typescript-eslint/parser": "^5.59.7",
     "chai": "^4.3.7",
     "css-loader": "^6.8.1",
-    "eslint": "^8.41.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^15.0.0",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.5.3",
-    "husky": "^4.3.8",
+    "husky": "8.0.3",
     "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "^4.1.2",
     "parcel": "^2.8.3",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
@@ -59,7 +54,7 @@
     "proxyquire": "^2.1.3",
     "sinon": "^15.2.0",
     "stylelint": "^15.6.2",
-    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard": "34.0.0",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
