--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "npm-run-all eslint stylelint",
     "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'",
     "validate": "npm-run-all --parallel test lint",
-    "precommit": "npm run validate"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -42,7 +42,7 @@
     "eslint-config-airbnb-typescript": "^15.0.0",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.5.3",
-    "husky": "8.0.3",
+    "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
